--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Colegio Nacional</title>
+    <title>Hola</title>
 </head>
 <body>
     <header>
         Estamos aprendiendo a hacer una página web
     </header>
     <img src="logoNcional.jfif" width="1000">
+    
 </body>
 </html>
